# particle_interactions_puzzle

./: .gitignore  Cargo.toml  README.md  pyproject.toml
examples/: problem1.rs  project.html  project.ipynb
particle_interactions_puzzle/: __init__.py  plotting.py
src/: lib.rs  math.rs  optimize.rs  particle.rs  simulation.rs  types.rs
