[package]
name = "particle_interactions_puzzle"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "particle_interactions_puzzle"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["anyhow"] }
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.27"
num = "0.4.3"
rand = "0.9.2"

[features]
default = ["f64"]
f64 = []
f32 = []
